# TemperatureDistribution-mipt-spring-2020

./: Button.cpp  Button.h  CMakeLists.txt  CSRmatrix.cpp  CSRmatrix.h  GUI.cpp  GUI.h  OneChoiseBar.cpp  OneChoiseBar.h  README.md  Solvers.h  TextBar.cpp  TextBar.h  Vector.h  Window.cpp  Window.h  animation.cpp  animation.h  difference_scheme.h  difference_shame.h  main.cpp  menu.cpp  menu.h  special_number.cpp  special_number.h
